<resources>
    <string name="app_name">StorageDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="placeholder_fragment">Placeholder Fragment</string>
    <string name="save_data_locally">Local</string>
    <string name="good_student">Good Student?</string>
    <string name="year_of_study">Year of Study</string>
    <string name="program">Program</string>
    <string name="email">E-mail</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle name</string>
    <string name="first_name">First Name</string>
    <string name="lets_record_local">Save data locally!</string>
    <string name="lets_record_remote">Save data Remotely!</string>
    <string name="save_remotely">Remote</string>
    <string name="dummy_email">dummE@gmail.com</string>
    <string name="dummy_last_name">Last Name</string>
    <string name="dummy_first_name">Ruhuta</string>
    <string name="dummy_program">CS</string>
    <string name="dummy_reg_number">2190001xx</string>
    <string name="dummy_year_of_study">4</string>
    <string name="list_fragment">List Fragment</string>
    <string name="go_to_second_activity">Second Activity</string>
    <string name="aha_niho">hint: Aha niho hagomba kujya za Design zabanje.</string>
    <string name="fragment_one_create">Fragment One Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_two_create">Fragment Two Create</string>
</resources>